--- a/.examples/docker-compose/with-nginx-proxy/mariadb/fpm/web/nginx.conf
+++ b/.examples/docker-compose/with-nginx-proxy/mariadb/fpm/web/nginx.conf
@@ -36,11 +36,11 @@ http {
     #gzip  on;
 
     upstream php-handler {
-        server app:9000;
+        server unix:/var/run/php/php-fpm.sock;
     }
 
     server {
-        listen 80;
+        listen 10.0.0.40:80;
 
         # HSTS settings
         # WARNING: Only add the preload option once you read about
@@ -51,8 +51,8 @@ http {
         #add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;" always;
 
         # set max upload size and increase upload timeout:
-        client_max_body_size 512M;
-        client_body_timeout 300s;
+        client_max_body_size 16G;
+        client_body_timeout 3600s;
         fastcgi_buffers 64 4K;
 
         # The settings allows you to optimize the HTTP2 bandwidth.
@@ -84,7 +84,7 @@ http {
         fastcgi_hide_header X-Powered-By;
 
         # Path to the root of your installation
-        root /var/www/html;
+        root /usr/local/www/nextcloud;
 
         # Specify how to handle directories -- specifying `/index.php$request_uri`
         # here as the fallback means that Nginx always exhibits the desired behaviour
